--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,120 +29,106 @@
 </head>
 
 <body>
-	<div id="header">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+<div id="header">
+  <nav class="navbar"></nav>
+</div>
 
-			<div class="collapse navbar-collapse" id="navbarColor01">
-				<ul class="navbar-nav ml-auto">
+<nav class="nav">
+  <div class="nav-content">
+    <span class="name">name</span>
+    <span class="right">
+      <a href="#about">About</a>
+      <a href="#design">Design Project</a>
+      <a href="#goals">Future Goals</a>
+      <a href="#contact">Contact</a>
+    </span>
+  </div>
+</nav>
+<div class="content">
 
-                {% for static in site.pages %}
-                    {% if static.id %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="#{{ static.id }}">{{ static.title }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
+  <section id="about">
+    <h1>About</h1>
+    <div class="section-content">
+      <div class="no-img">
+        <p class="p-r">
+          text text text text text text text text text text text text text text text text text text text
+          text text text text text text text text text text text text text text text text text text text
+          text text text text text text text text text text text text text text text text text text text
+          text text text text text text text text text text text text text text text text text text text
+          text text text text text text text text text text text text text text text text text text text
+          text text text text text text text text text text text text text text text text text text text
+        </p>
+      </div>
+    </div>
+  </section>
 
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="text" placeholder="Search">
-					<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-				</form>
-			</div>
-		</nav>
-	</div><!-- end header -->
+  <section id="design">
+    <h1>Design Project</h1>
+    <div class="section-content">
+      <div class="left-img-box">
+        <img src="./files/img.png" alt="" title="">
+      </div>
+      <div class="right-text-box">
+        <h3>title</h3>
+        <p>text texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext
+          texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext text
+        </p>
+        <br>
+        <h3>title</h3>
+        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+      </div>
+    </div>
+  </section>
 
-	<div class="wrapper container">
+  <section id="goals">
+    <h1>Future Goals</h1>
+    <div class="section-content">
+      <div class="left-img-box">
+        <img src="./files/img.png" alt="" title="">
+      </div>
+      <div class="right-text-box">
+        <h3>title</h3>
+        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <br>
+        <br>
+        <h3>title</h3>
+        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+      </div>
+    </div>
+  </section>
 
-		<section>
-			{% if current.thumbnail %}
-                <img src="{{ current.thumbnail }}" alt="{{ current.title }}" title="{{ current.title }}" />
-            {% endif %}
-            <div id="title">
-				<h1>{{ current.title }}</h1>
-				<hr>
-			</div>
+  <section id="contact">
+    <h1>Contact</h1>
+    <div class="section-content">
+      <div class="left-img-box">
+        <img src="./files/img.png" alt="" title="">
+      </div>
+      <div class="right-text-box">
+        <h3>title</h3>
+        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <br>
+        <h3>title</h3>
+        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+      </div>
+    </div>
+  </section>
 
-			{{ current.content }}
-
-		</section>
-		<section>
-			{% for i in (1..2) %}
-                <div class="row">
-                    {% assign offset = forloop.index0 | times: 3 %}
-                    {% assign posts = site.posts | where_exp:"post","post.url != current.url" %}
-                    {% for post in posts limit:3 offset:offset %}
-                        <div class="col-md-4">
-                            <div class="card text-white bg-primary mb-3">
-                                <div class="card-header">{{ post.title }}</div>
-                                <div class="card-body">
-                                    <a href="{{ post.url }}">
-                                        {% if post.thumbnail %}
-                                            <img src="{{ post.thumbnail }}" alt="{{ post.title }}" title="{{ post.title }}" />
-                                        {% endif %}
-                                    </a>
-                                </div>
-                            </div>
-
-                        </div>
-                    {% endfor %}
-                </div>
-			{% endfor %}
-		</section>
-		<section>
-			{% for static in site.pages %}
-                {% if static.id %}
-                    <div id="{{ static.id }}">
-                    {% if static.thumbnail %}
-                        <img src="{{ static.thumbnail }}" alt="{{ static.title }}" title="{{ static.title }}" />
-                    {% endif %}
-                    <div id="title">
-                        <h1>{{ static.title }}</h1>
-                        <hr>
-                    </div>
-
-                    {{ static.content }}
-                    </div>
-
-                {% endif %}
-			{% endfor %}
-		</section>
-		<footer id="footer">
-		</footer>
-	</div>
-	<script>
-		if (window.netlifyIdentity) {
-            window.netlifyIdentity.on("init", user => {
-            if (!user) {
-                window.netlifyIdentity.on("login", () => {
-                document.location.href = "/admin/";
-                });
-            }
-            });
-        }
-	</script>
-	{% if site.google_analytics %}
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', '{{ site.google_analytics }}', 'auto');
-            ga('send', 'pageview');
-        </script>
-	{% endif %}
-	{% unless page.collection %}
-        {% if page.id %}
-            <script>
-                window.location = (""+window.location).replace(/#[A-Za-z0-9_]*$/,'')+"#{{ page.id }}"
-            </script>
-        {% endif %}
-	{% endunless %}
-
+  <footer id="footer">
+    <section id="reference">
+      <h1>Reference</h1>
+      <div class="no-img">
+        <p class="p-r">text text text text text text text text text text text text text text text text text text text
+          text </p>
+        <p class="p-r">text text text text text text text text text text text text text text text text text text text
+          text </p>
+        <p class="p-r">text text text text text text text text text text text text text text text text text text text
+          text </p>
+        <p class="p-r">text text text text text text text text text text text text text text text text text text text
+          text </p>
+      </div>
+    </section>
+  </footer>
+</div>
 </body>
 
 </html>
