--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@ section h1{
     	<meta name="robots" content="{{ page.robots }}" />
 	{% endif %}
 	{{ seo }}
-	<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+	cscript src="https://code.jquery.com/jquery-1.12.4.min.js"
 		integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 	<script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
 	<!--[if lt IE 9]>
