--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,12 +118,11 @@ section h1{
     <div class="section-content">
       <div class="no-img">
         <p class="p-r">
-          text text text text text text text text text text text text text text text text text text text
-          text text text text text text text text text text text text text text text text text text text
-          text text text text text text text text text text text text text text text text text text text
-          text text text text text text text text text text text text text text text text text text text
-          text text text text text text text text text text text text text text text text text text text
-          text text text text text text text text text text text text text text text text text text text
+          My most ambitious goal is to be a good UX designer, and all my other small goals are built around becoming UX designers. 
+	  When I first met UX design, I found its charm. Our efforts are not only to get a job but more importantly, this work can bring happiness to people.
+	  Improve product availability, ease of use and user enjoyment. This makes the job and discipline more meaningful.
+	  What I was most impressed with within my experience with UX was that a school building was designed by UX students.
+	  I am very admired for the intimate detail design and excellent user experience. I think this is my future goal, becoming a UX designer dedicated to improving the lives of others.
         </p>
       </div>
     </div>
