--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     margin: 0 auto;
     overflow: auto;
 }
-.nav .Qing_Zhang{
+.nav .name{
     float: left;
 }
 .nav .right{
@@ -102,7 +102,7 @@ section h1{
 
 <nav class="nav">
   <div class="nav-content">
-    <span class="name">name</span>
+    <span class="Qing_Zhang">name</span>
     <span class="right">
       <a href="#about">About</a>
       <a href="#design">Design Project</a>
