--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,7 @@ section h1{
 
 <nav class="nav">
   <div class="nav-content">
-    <span class="Qing_Zhang">name</span>
+    <span class="name">name</span>
     <span class="right">
       <a href="#about">About</a>
       <a href="#design">Design Project</a>
