--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     margin: 0 auto;
     overflow: auto;
 }
-.nav .name{
+.nav .Qing_Zhang{
     float: left;
 }
 .nav .right{
@@ -80,7 +80,7 @@ section h1{
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	{% if page.robots %}
-    	<meta name="robots" content="{{ page.robots }}" />
+    	<meta Qing_Zhang="robots" content="{{ page.robots }}" />
 	{% endif %}
 	{{ seo }}
 	cscript src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -91,7 +91,7 @@ section h1{
     <![endif]-->
 	<!--[if lt IE 8]>
     <![endif]-->
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta Qing_Zhang="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	
 </head>
@@ -102,7 +102,7 @@ section h1{
 
 <nav class="nav">
   <div class="nav-content">
-    <span class="name">name</span>
+    <span class="Qing_Zhang">Qing_Zhang</span>
     <span class="right">
       <a href="#about">About</a>
       <a href="#design">Design Project</a>
