--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@ section h1{
     <span class="Qing_Zhang">Qing_Zhang</span>
     <span class="right">
       <a href="#about">About</a>
-      <a href="#design">Design Project</a>
+      <a href="#design">My Past Design</a>
       <a href="#goals">Future Goals</a>
       <a href="#contact">Contact</a>
     </span>
@@ -129,7 +129,7 @@ section h1{
   </section>
 
   <section id="design">
-    <h1>Design Project</h1>
+    <h1>My Past Design</h1>
     <div class="section-content">
       <div class="left-img-box">
         <img src="./files/img.png" alt="" title="">
