--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@ section h1{
     <h1>My Past Design</h1>
     <div class="section-content">
       <div class="left-img-box">
-        <img src="WeChatImage_20191202032849.jpg" alt="" Post Design="">
+        <img src="./images/uploads/WeChatImage_20191202032849.jpg" alt="" Post Design"">
       </div>
       <div class="right-text-box">
         <h3>title</h3>
