--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,16 +132,23 @@ section h1{
     <h1>My Past Design</h1>
     <div class="section-content">
       <div class="left-img-box">
-        <img src="./images/uploads/WeChatImage_20191202032849.jpg" alt="" Post Design"">
+        <img src="./images/WeChatImage_20191202032849.jpg" alt=""Post Design"">
       </div>
       <div class="right-text-box">
-        <h3>title</h3>
-        <p>text texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext
-          texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext texttext text
+        <h3>Post Design</h3>
+        <p>Although this design seems simple, I have applied all the knowledge I have learned together.
+		This is the first time I've connected design thinking with real tools.
+		I designed the logo using Adobe Illustrator, designed the whole poster using Adobe Photoshop and embellished it
         </p>
         <br>
-        <h3>title</h3>
-        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <h3>My Angle</h3>
+        <p>Legarcy of hope's mission is to educate all canadians to build just and equitable reconciliation
+		and rehabilitation relationships,expand awareness and access to the rich heritage of indigenous
+		peoples' contributions in Canada and around the world, and promote the history of indigenous peoples
+		in Canada, including the history of injustice. (LEGACY OF HOPE FOUNDATION, 2015) and my goal is to
+		convey this core idea OF helpfulness to others through posters.
+
+</p>
       </div>
     </div>
   </section>
