--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -135,7 +135,7 @@ section h1{
         <img src="./images/WeChatImage_20191202032849.jpg" alt=""Post Design"">
       </div>
       <div class="right-text-box">
-        <h3>Post Design</h3>
+        <h3>Poster Design</h3>
         <p>Although this design seems simple, I have applied all the knowledge I have learned together.
 		This is the first time I've connected design thinking with real tools.
 		I designed the logo using Adobe Illustrator, designed the whole poster using Adobe Photoshop and embellished it
@@ -154,18 +154,26 @@ section h1{
   </section>
 
   <section id="goals">
-    <h1>Future Goals</h1>
+    <h1>Difficulties and Solutions
+</h1>
     <div class="section-content">
       <div class="left-img-box">
         <img src="./files/img.png" alt="" title="">
       </div>
       <div class="right-text-box">
-        <h3>title</h3>
-        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <h3>Difficulties</h3>
+        <p>The first problem I encountered was that I didn't know enough about the design of the poster layout.
+		The main components of a poster are title, background, article, etc. But I don't know all the parts, 
+		so the initial poster design was not good
+	</p>
         <br>
         <br>
-        <h3>title</h3>
-        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <h3>Solutions</h3>
+        <p>First, I searched relevant public benefit posters on the Internet and compared and recorded
+		the layout contents of several public benefit posters. Finally, I came to some conclusions
+		from my own point of view, then I discussed with my partner and finally determined the layout
+
+t</p>
       </div>
     </div>
   </section>
