--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -142,13 +142,11 @@ section h1{
         </p>
         <br>
         <h3>My Angle</h3>
-        <p>Legarcy of hope's mission is to educate all canadians to build just and equitable reconciliation
+        <p> Legarcy of hope's mission is to educate all canadians to build just and equitable reconciliation
 		and rehabilitation relationships,expand awareness and access to the rich heritage of indigenous
 		peoples' contributions in Canada and around the world, and promote the history of indigenous peoples
 		in Canada, including the history of injustice. (LEGACY OF HOPE FOUNDATION, 2015) and my goal is to
-		convey this core idea OF helpfulness to others through posters.
-
-</p>
+		convey this core idea OF helpfulness to others through posters. </p>
       </div>
     </div>
   </section>
@@ -162,14 +160,14 @@ section h1{
       </div>
       <div class="right-text-box">
         <h3>Difficulties</h3>
-        <p>The first problem I encountered was that I didn't know enough about the design of the poster layout.
+        <p> The first problem I encountered was that I didn't know enough about the design of the poster layout.
 		The main components of a poster are title, background, article, etc. But I don't know all the parts, 
 		so the initial poster design was not good
 	</p>
         <br>
         <br>
         <h3>Solutions</h3>
-        <p>First, I searched relevant public benefit posters on the Internet and compared and recorded
+        <p> First, I searched relevant public benefit posters on the Internet and compared and recorded
 		the layout contents of several public benefit posters. Finally, I came to some conclusions
 		from my own point of view, then I discussed with my partner and finally determined the layout
 
