--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -188,6 +188,10 @@ t</p>
         <br>
         <h3>title</h3>
         <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <br>
+	      <h3>title</h3>
+<p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+	      <br>
       </div>
     </div>
   </section>
