--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,21 +176,31 @@ t</p>
     </div>
   </section>
 
-  <section id="contact">
+  <section id="Conclusion">
     <h1>Contact</h1>
     <div class="section-content">
       <div class="left-img-box">
         <img src="./files/img.png" alt="" title="">
       </div>
       <div class="right-text-box">
-        <h3>title</h3>
-        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <h3>The technique used in the work
+
+</h3>
+        <p>Adobe Illustrator：Used to design logos.
+	      Adobe Photoshop: Design the layout of the whole poster, including editing text and pictures, post beautification
+</p>
         <br>
-        <h3>title</h3>
-        <p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+        <h3>Process</h3>
+        <p>Ideas——layout sketches——search for available image text——build——beautify, details
+</p>
         <br>
-	      <h3>title</h3>
-<p>texttexttexttexttexttexttexttexttexttexttexttexttexttexttext</p>
+	      <h3>Conclusion</h3>
+<p>Although this poster design is simple, it also USES many techniques.
+	From this point, I think I still need to learn more useful skills and techniques.
+	Discussion with peers is also a very effective way to solve problems.
+	If I will do similar works in the future, I will summarize my previous mistakes and experience and improve myself
+	with each new challenge
+</p>
 	      <br>
       </div>
     </div>
@@ -200,14 +210,9 @@ t</p>
     <section id="reference">
       <h1>Reference</h1>
       <div class="no-img">
-        <p class="p-r">text text text text text text text text text text text text text text text text text text text
-          text </p>
-        <p class="p-r">text text text text text text text text text text text text text text text text text text text
-          text </p>
-        <p class="p-r">text text text text text text text text text text text text text text text text text text text
-          text </p>
-        <p class="p-r">text text text text text text text text text text text text text text text text text text text
-          text </p>
+        <p class="p-r">LEGACY OF HOPE FOUNDATION.(2015). About Us. Retrieved December 2, 2019, fromhttp://legacyofhope.ca/</p>
+        
+        <p class="p-r">Contact ME! qing4260@mylaurier.ca </p>
       </div>
     </section>
   </footer>
