--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -177,10 +177,10 @@ t</p>
   </section>
 
   <section id="Conclusion">
-    <h1>Contact</h1>
+    <h1>Conclusion and Experience</h1>
     <div class="section-content">
       <div class="left-img-box">
-        <img src="./files/img.png" alt="" title="">
+        <img src="" alt="" title="">
       </div>
       <div class="right-text-box">
         <h3>The technique used in the work
