--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,9 +105,9 @@ section h1{
     <span class="Qing_Zhang">Qing_Zhang</span>
     <span class="right">
       <a href="#about">About</a>
-      <a href="#design">My Past Design</a>
-      <a href="#goals">Future Goals</a>
-      <a href="#contact">Contact</a>
+      <a href="#My Past Design">My Past Design</a>
+      <a href="#Difficulties and Solutions">Difficulties and Solutions</a>
+      <a href="#Conclusion and Experience">Conclusion and Experience</a>
     </span>
   </div>
 </nav>
