--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@ section h1{
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	{% if page.robots %}
-    	<meta Qing_Zhang="robots" content="{{ page.robots }}" />
+    	<meta Qing_Zhang="robots" Conclusion and Experience="{{ page.robots }}" />
 	{% endif %}
 	{{ seo }}
 	cscript src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -91,7 +91,7 @@ section h1{
     <![endif]-->
 	<!--[if lt IE 8]>
     <![endif]-->
-	<meta Qing_Zhang="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<meta Qing_Zhang="viewport" Conclusion and Experience="width=device-width, initial-scale=1, user-scalable=no">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	
 </head>
@@ -111,7 +111,7 @@ section h1{
     </span>
   </div>
 </nav>
-<div class="content">
+<div class="Conclusion and Experience">
 
   <section id="about">
     <h1>About</h1>
@@ -128,7 +128,7 @@ section h1{
     </div>
   </section>
 
-  <section id="design">
+  <section id="My Past Design">
     <h1>My Past Design</h1>
     <div class="section-content">
       <div class="left-img-box">
@@ -151,7 +151,7 @@ section h1{
     </div>
   </section>
 
-  <section id="goals">
+  <section id="Difficulties and Solutions">
     <h1>Difficulties and Solutions
 </h1>
     <div class="section-content">
@@ -176,7 +176,7 @@ t</p>
     </div>
   </section>
 
-  <section id="Conclusion">
+  <section id="Conclusion and Experience">
     <h1>Conclusion and Experience</h1>
     <div class="section-content">
       <div class="left-img-box">
@@ -206,7 +206,7 @@ t</p>
     </div>
   </section>
 
-  <footer id="footer">
+  <footer id="reference">
     <section id="reference">
       <h1>Reference</h1>
       <div class="no-img">
