--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@ section h1{
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	{% if page.robots %}
-    	<meta Qing_Zhang="robots" Conclusion and Experience="{{ page.robots }}" />
+    	<meta Qing_Zhang="robots" content="{{ page.robots }}" />
 	{% endif %}
 	{{ seo }}
 	cscript src="https://code.jquery.com/jquery-1.12.4.min.js"
@@ -91,7 +91,7 @@ section h1{
     <![endif]-->
 	<!--[if lt IE 8]>
     <![endif]-->
-	<meta Qing_Zhang="viewport" Conclusion and Experience="width=device-width, initial-scale=1, user-scalable=no">
+	<meta Qing_Zhang="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	
 </head>
