--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@ section h1{
   <div class="nav-content">
     <span class="Qing_Zhang">Qing_Zhang</span>
     <span class="right">
-      <a href="#about">About</a>
+      <a href="#About">About</a>
       <a href="#My Past Design">My Past Design</a>
       <a href="#Difficulties and Solutions">Difficulties and Solutions</a>
       <a href="#Conclusion and Experience">Conclusion and Experience</a>
@@ -113,7 +113,7 @@ section h1{
 </nav>
 <div class="Conclusion and Experience">
 
-  <section id="about">
+  <section id="About">
     <h1>About</h1>
     <div class="section-content">
       <div class="no-img">
