--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@ section h1{
     </span>
   </div>
 </nav>
-<div class="Conclusion and Experience">
+<div class="About">
 
   <section id="About">
     <h1>About</h1>
