--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,7 +152,7 @@ section h1{
 </h1>
     <div class="section-content">
       <div class="left-img-box">
-        <img src="./files/img.png" alt="" title="">
+        <img src="./11.html" width="250" height="300"" alt="" title="">
       </div>
       <div class="right-text-box">
         <h3>Difficulties</h3>
@@ -176,7 +176,7 @@ t</p>
     <h1>Conclusion and Experience</h1>
     <div class="section-content">
       <div class="left-img-box">
-        <img src="" alt="" title="">
+        <img src="./222.png" width="250" height="300" alt="" title="">
       </div>
       <div class="right-text-box">
         <h3>The technique used in the work
