--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,7 +152,7 @@ section h1{
 </h1>
     <div class="section-content">
       <div class="left-img-box">
-        <img src="./11.html" width="250" height="300"" alt="" title="">
+        <img src="./11.html" width="250" height="300" alt="" title="">
       </div>
       <div class="right-text-box">
         <h3>Difficulties</h3>
