--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -191,6 +191,11 @@ t</p>
 </p>
         <br>
 	      <h3>Conclusion</h3>
+	      <div class="section-content">
+      <div class="left-img-box">
+       <img src="./333.png" width="250" height="300" alt="" title="" >
+      </div>
+      <div class="right-text-box">	      
 <p>Although this poster design is simple, it also USES many techniques.
 	From this point, I think I still need to learn more useful skills and techniques.
 	Discussion with peers is also a very effective way to solve problems.
